# AWS-ETL-Infrastructure-via-Pulumi

./: Pulumi.etl-dev.yaml  Pulumi.yaml  go.mod  go.sum  main.go
.github/workflows/: deploy.yml
consumer/: Cargo.toml  lambda_function.py
consumer/idna-3.16.dist-info/: RECORD
consumer/src/: main.rs
producer/: lambda_function.py
