[package]
name = "consumer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
lambda_runtime = "1.2.0"
aws_lambda_events = { version = "1.2.0", default-features = false, features = ["sqs"] }
reqwest = { version = "0.13.3", default-features = false, features = ["rustls", "json"] }
mongodb = "3.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"